<resources>
    <string name="app_name">EasyFit</string>
    <string name="home">Strona główna</string>
    <string name="products">Produkty</string>
    <string name="history">Historia</string>
    <string name="notifications">Przypomnienia</string>
    <string name="goals">Cele</string>
    <string name="logout">Wyloguj</string>

    <string name="meals">Posiłki</string>

    <string name="avatarDesc">Awatar użytkownika</string>

    <string name="notificationEdit">Edytuj</string>
    <string name="notificationDelete">Usuń</string>

    <string name="plannedNotifications">Zaplanowane przypomnienia:</string>

    <string name="notificationTitle">Przypomnienie o posiłku!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="goalsDesc">Cel kalorii i makroskładników:</string>
    <string name="calories">Kalorie</string>
    <string name="carbs">Węglowodany</string>
    <string name="proteins">Białko</string>
    <string name="fat">Tłuszcz</string>
    <string name="placeholder1">3130</string>
    <string name="placeholder">50%</string>
    <string name="edit">Edytuj</string>

    <string name="warningText">"Łączna wartość procentowa makroskładników musi wynosić 100%!"</string>

    <string name="goal">Cel</string>
    <string name="eaten">Spożyte</string>
    <string name="left">Pozostało</string>
    <string name="eatenCalories">Spożyte kalorie: </string>
    <string name="carbsColon">Węglowodany: </string>
    <string name="proteinsColon">Białko: </string>
    <string name="fatColon">Tłuszcz: </string>
    <string name="grams">g</string>
    <string name="placeholder100">100</string>
    <string name="placeholderDate">12.02.2018</string>

    <string name="addProduct">Dodaj produkt</string>
    <string name="endDay">Zakończ dzień</string>

    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="quantityDialogName">Podaj ilość</string>

    <string name="login">Zaloguj się</string>
    <string name="createAccount">Zarejestruj się</string>

    <string name="email">e-mail</string>
    <string name="password">hasło</string>
    <string name="retypePassword">powtórz hasło</string>

    <string name="setGoal">Określ swój cel kalorii i makroskładników</string>

    <string name="addSimpleProduct">Dodaj nowy produkt</string>
    <string name="addMeal">Dodaj nowy posiłek</string>
    <string name="name">Nazwa</string>
    <string name="kcalin100g">/100g</string>
    <string name="in100g">g/100g</string>
    <string name="kcal">kcal</string>
    <string name="close">zamknij</string>

    <string-array name="simpleProducts">
        <item>Ogórek</item>
        <item>Ser</item>
        <item>Szynka</item>
    </string-array>

    <string-array name="simpleProductsCalories">
        <item>12</item>
        <item>24</item>
        <item>32</item>
    </string-array>

    <string-array name="grams">
        <item>100</item>
        <item>200</item>
        <item>300</item>
    </string-array>

    <string-array name="meals">
        <item>Schabowy</item>
        <item>Zupa</item>
        <item>Pizza</item>
    </string-array>

    <string-array name="dates">
        <item>12.02.2018</item>
        <item>13.02.2018</item>
        <item>14.02.2018</item>
        <item>15.02.2018</item>
        <item>16.02.2018</item>
        <item>17.02.2018</item>
        <item>18.02.2018</item>

    </string-array>

    <string-array name="calories">
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
    </string-array>

    <string-array name="grams2">
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
    </string-array>


</resources>
