<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--those items open a fragment, stay selected-->
    <group android:checkableBehavior="single">
        <item android:id="@+id/navHome"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item android:id="@+id/navProducts"
            android:icon="@drawable/ic_products"
            android:title="@string/products"/>
        <item android:id="@+id/navNotifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications"/>
        <item android:id="@+id/navGoals"
            android:icon="@drawable/ic_goal"
            android:title="@string/goals"/>
        <item android:id="@+id/navHistory"
            android:icon="@drawable/ic_history"
            android:title="@string/history"/>
    </group>



    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_share"-->
                <!--android:title="Share"/>-->

            <!--<item android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_send"-->
                <!--android:title="Send"/>-->
        <!--</menu>-->
    <!--</item>-->


</menu>